Fix nav z-index

--- a/nx/styles/nexter.css
+++ b/nx/styles/nexter.css
@@ -153,10 +153,11 @@ h6 {
 
 .nx-app header {
   height: var(--nx-nav-height);
+  z-index: 1000;
 }
 
 .nx-app main {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .no-shell main {
@@ -165,6 +166,7 @@ h6 {
 
 .nx-app nx-sidenav {
   display: none;
+  z-index: 1000;
 }
 
 .section {
